--- a/src/Home/PastClients.css
+++ b/src/Home/PastClients.css
@@ -17,6 +17,8 @@
     overflow-x: hidden;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    justify-items: center;
     height: 100%;
 }
 
@@ -27,20 +29,18 @@
 .client-card {
     width: 250px;
     height: 250px;
-    margin: 80px 5%;
+    margin: 80px 10px;
     flex-shrink: 0;
     position: relative;
     left: 100%;
     animation: slide 40s linear infinite; /* Slowed down for smoother animation */
     align-self: center;
-    background-color: rgb(168, 168, 168);
-    border-radius: 125px;
 }
 
 .client-card img {
-    height: 250px;
-    width: 100%;
-    transition: transform 0.4s cubic-bezier(0.33, 1, 0.68, 1); /* Added smooth transition */
+    /* height: 250px; */
+    width: 70%;
+    transition: transform 0.8s cubic-bezier(0.33, 1, 0.68, 1); /* Added smooth transition */
 }
 
 .client-card img:hover {
@@ -78,8 +78,6 @@
         height: 150px;
         width: 150px;
         align-self: center;
-        background-color: rgb(169, 169, 169);
-        border-radius: 75px;
     }
 
     .client-card img {
